--- a/reservations/templates/reservations/search_trips.html
+++ b/reservations/templates/reservations/search_trips.html
@@ -79,7 +79,7 @@
                     </div>
                     
                     <div class="voyage-price">
-                        {{ voyage.id_ligne.prix }} F CFA
+                        {{ voyage.id_ligne.prix }} 
                     </div>
                     
                     <div class="voyage-actions">
