--- a/reservations/templates/reservations/Reservation_form.html
+++ b/reservations/templates/reservations/Reservation_form.html
@@ -81,6 +81,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn">Réserver</button>
+        <button type="submit" class="btn">Confirmer la réservation</button>
     </form>
     <div class="footer">
+        {% endblock %}
